<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreviewActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/my_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:padding="16dp">
        <ImageView
            android:layout_width="17dp"
            android:layout_height="20dp"
            android:src="@drawable/back"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/judul_cek_kembali"
                    android:textFontWeight="900"
                    android:textSize="20sp"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nik"
                    android:layout_marginTop="32dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:id="@+id/preview_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nik_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/neutral_gray_800"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/neutral_gray_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:id="@+id/preview_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/neutral_gray_800"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/neutral_gray_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_lahir"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:id="@+id/preview_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_lahir_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/neutral_gray_800"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/neutral_gray_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:id="@+id/preview_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/laki_laki"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/neutral_gray_800"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/neutral_gray_200"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hubungan_dg_anda"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <TextView
                    android:id="@+id/preview_hubungan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orang_tua"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/neutral_gray_800"/>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:padding="16dp"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selanjutnya"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginBottom="16dp"
                />
            <Button
                android:id="@+id/preview_btn_ubah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah"
                android:background="@drawable/bg_button_ubah"
                android:textColor="@color/neutral_gray_600"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textFontWeight="700"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>