<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/my_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:padding="16dp">
        <ImageView
            android:layout_width="17dp"
            android:layout_height="20dp"
            android:src="@drawable/back"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/judul_pengisian_data"
                    android:textFontWeight="900"
                    android:textSize="20sp"
                    android:textColor="@color/neutral_gray_800"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="24dp"
                    android:padding="16dp"
                    android:background="@drawable/bg_info">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/judul_info"
                        android:textFontWeight="700"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_value"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nik"
                    android:layout_marginTop="24dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="700"
                    android:textColor="@color/neutral_gray_800"/>
                <EditText
                    android:id="@+id/main_nik"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Masukkan NIK"
                    android:text="@string/nik_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginTop="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:layout_marginTop="24dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="700"
                        android:textColor="@color/neutral_gray_800"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harus_diisi"
                        android:layout_marginTop="24dp"
                        android:textSize="10sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        android:textColor="@color/jds_primary_color_green"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/main_nama"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Masukkan NIK"
                    android:text="@string/nama_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginTop="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_lahir"
                        android:layout_marginTop="24dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="700"
                        android:textColor="@color/neutral_gray_800"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harus_diisi"
                        android:layout_marginTop="24dp"
                        android:textSize="10sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        android:textColor="@color/jds_primary_color_green"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/main_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Masukkan NIK"
                    android:text="@string/tanggal_lahir_value"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:padding="12dp"
                    android:background="@drawable/bg_edit_text"
                    android:layout_marginTop="8dp"
                    android:drawableRight="@drawable/calendar"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kelamin"
                        android:layout_marginTop="24dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="700"
                        android:textColor="@color/neutral_gray_800"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harus_diisi"
                        android:layout_marginTop="24dp"
                        android:textSize="10sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        android:textColor="@color/jds_primary_color_green"/>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/main_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/laki_laki"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/perempuan"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hubungan_dg_anda"
                        android:layout_marginTop="24dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="700"
                        android:textColor="@color/neutral_gray_800"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harus_diisi"
                        android:layout_marginTop="24dp"
                        android:textSize="10sp"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="500"
                        android:textColor="@color/jds_primary_color_green"/>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/main_hubungan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="24dp">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/orang_tua"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/suami_atau_istri"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/anak"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kerabat_lainnya"
                        android:fontFamily="@font/roboto"
                        android:textFontWeight="400"
                        android:textSize="14sp"/>
                </RadioGroup>


            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:padding="16dp">
            <Button
                android:id="@+id/main_selanjutnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selanjutnya"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textFontWeight="700"
                />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>